--- a/templates/blog/home.html
+++ b/templates/blog/home.html
@@ -6,7 +6,12 @@
 </head>
 <body>
     {% for category in categories %}
-    <p><a href="{% url 'category' category.slug %}">{{category.name}}</a></p>
+<!--        <p><a href="{% url 'category' category.slug %}">{{category.name}}</a></p>-->
+    {% endfor %}
+    <hr>
+    {% for post in post_list %}
+    <p>{{post.title}} - {{post.published_date}}</p>
+    <p>{{post.text}}</p>
     {% endfor %}
 </body>
 </html>
