--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -11,18 +11,34 @@
     <hr>
 
         <h2>{{ post.title }}</h2>
+        <h2>{{ post.subtitle }}</h2>
         <p>{{ post.mini_text }}</p>
         <p>Категория - {{ post.category }}</p>
 
-<!--        {# Теги - {% for tag in post.get_tags %} вызов метода модели POST (скобки в шаблонах ставить не нужно !!!) #}-->
+{#        Теги - {% for tag in post.get_tags %} вызов метода модели POST (скобки в шаблонах ставить не нужно !!!)#}
 
         Теги - {% for tag in post.tags.all %}
-                    #{{ tag.name }},
+                    #<a href="{% url 'tag' tag.slug %}">{{ tag.name }}</a>,
                {% endfor %}
         <br>
-        <small>Автор: {{ post.author }} {{ post.published_date }}</small>
+        <small>Автор: {{ post.author }} - {{ post.published_date }}</small><br>
+        <small>Просмотры: {{ post.viewed }}</small>
+        <hr>
 
         <h4>Комментарии</h4>
+
+{#        {% for comment in comments %}#}
+{#            Пользователь - {{ comment.author }}<br>#}
+{#            {{ comment.text }}<br>#}
+{#            Добавлен - {{ comment.create_date }}<br><br>#}
+{#        {% endfor %}#}
+
+{#            Доступ к комментариям через связь Foreign key#}
+        {% for comment in post.comment_set.all %}
+            Пользователь - {{ comment.author }}<br>
+            {{ comment.text }} <br>
+            Добавлен - {{ comment.create_date }}<br><br>
+        {% endfor %}
 
 </body>
 </html>
