--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     {% for category in categories %}
-        <p><a href="{% url 'category' category.slug %}">{{category.name}}</a></p>
+        <p><a href="{{ category.get_absolute_url }}">{{category.name}}</a></p>
     {% endfor %}
     <hr>
     {% if post_list %}
