--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -29,10 +29,9 @@
 
         <h4>Комментарии</h4>
         {% if user.is_authenticated %}
-            <form action="/comment/" method="post">
+            <form action="" method="post">
                 {% csrf_token %}
-                <textarea name="text" cols="25" rows="10"></textarea><br>
-                <input type="hidden" name="post" value="{{ post.id }}">
+                {{ form.as_p }}
                 <button type="submit">Отправить</button>
             </form>
         {% else %}
