--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
+{% load  blog_tags %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-    {% for category in categories %}
-        <p><a href="{% url 'category' category.slug %}">{{category.name}}</a></p>
-    {% endfor %}
+    {% category_list count=3 %}
+{#    {% for category in categories %}#}
+{#        <p><a href="{% url 'category' category.slug %}">{{category.name}}</a></p>#}
+{#    {% endfor %}#}
     <hr>
 
         <h2>{{ post.title }}</h2>
