--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
+{% load  blog_tags %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-    {% for category in categories %}
-        <p><a href="{{ category.get_absolute_url }}">{{category.name}}</a></p>
-    {% endfor %}
-    <hr>
+
+{#    {% for_category_list count=3 order="id" as categories %}  {# ф-ия из blog_tags.py #}
+{#    {% for category in categories %}#}
+{#        <p><a href="{{ category.get_absolute_url }}">{{category.name}}</a></p>#}
+{#    {% endfor %}#}
+{#    <hr>#}
+
+    {% category_list count=3 template='base/blog/categories_v2.html'%}
+
     {% if post_list %}
         {% for post in post_list %}
             <h2><a href="{{ post.get_absolute_url }}">{{post.title}}</a></h2>
