--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-{% load  blog_tags %}
+{% load  blog_tags menu_tags %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,6 +12,9 @@
 {#        <p><a href="{{ category.get_absolute_url }}">{{category.name}}</a></p>#}
 {#    {% endfor %}#}
 {#    <hr>#}
+
+    {% menu_item menu="Main" %}
+    <hr>
 
     {% category_list template='base/blog/categories.html'%}
 
