--- a/templates/blog/sport_list.html
+++ b/templates/blog/sport_list.html
@@ -5,11 +5,13 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>Sport</h1>
+
+    <h1>Sport / News</h1>
     {% for category in categories %}
         <p><a href="{% url 'category' category.slug %}">{{category.name}}</a></p>
     {% endfor %}
     <hr>
+
     {% for post in post_list %}
         <h2><a href="{{ post.get_absolute_url }}">{{post.title}}</a></h2>
         <p>{{post.mini_text}}</p>
