--- a/templates/blog/home.html
+++ b/templates/blog/home.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     {% for category in categories %}
-<!--        <p><a href="{% url 'category' category.slug %}">{{category.name}}</a></p>-->
+            <p><a href="{% url 'category' category.slug %}">{{category.name}}</a></p>
     {% endfor %}
     <hr>
     {% for post in post_list %}
