--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,10 +1,20 @@
+{# Шаблон главной страници #}
 <!DOCTYPE html>
+{% load menu_tags %}  {# Подгрузка пунктов меню #}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
+{% menu_item menu="Main" %}
+<ul>
+    {% if user.is_authenticated %}
+        <li><a href="accounts/logout/">Выход</a></li>
+    {% else %}
+        <li><a href="accounts/login/">Вход</a></li>
+    {% endif %}
+</ul>
     <h1>{{ page.title }}</h1>
     <p>{{ page.text|safe}}</p>
 </body>
